# greedy-loot-optimizer

./: .gitignore  CMakeLists.txt  main.c  saida_jogo.txt
